[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Monster.gd" type="Script" id=1]
[ext_resource path="res://scenes/BodyPart.tscn" type="PackedScene" id=2]

[node name="Monster" type="Spatial"]
script = ExtResource( 1 )

[node name="Claw_right" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.53965, -0.0369388, -2.8851 )

[node name="Claw_left" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.34163, -0.0156194, 2.35232 )

[node name="Head" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.51081, 0, 0, 0, 1.51081, 0, 0, 0, 1.51081, -1.53002, 0.042848, -0.0230948 )
[connection signal="body_part_complete" from="Claw_right" to="." method="_on_Claw_right_body_part_complete"]
[connection signal="body_part_failed" from="Claw_right" to="." method="_on_Claw_right_body_part_failed"]
[connection signal="body_part_complete" from="Claw_left" to="." method="_on_Claw_left_body_part_complete"]
[connection signal="body_part_failed" from="Claw_left" to="." method="_on_Claw_left_body_part_failed"]
[connection signal="body_part_complete" from="Head" to="." method="_on_Head_body_part_complete"]
[connection signal="body_part_failed" from="Head" to="." method="_on_Head_body_part_failed"]
